fix: broken layout

--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -293,8 +293,14 @@
 
   /* Portfolio Section
    /* ----------------------------------------------------------------- */
+  #portfolio-wrapper {
+    flex-wrap: wrap;
+  }
   #portfolio-wrapper .columns {
     margin-bottom: 40px;
+  }
+  .portfolio-item {
+    width: 33.33333% !important;
   }
   .popup-modal {
     max-width: 85%;
